@@ -58,6 +58,7 @@ import io.harness.cdng.instance.outcome.InstancesOutcome;
 import io.harness.cdng.service.beans.ServiceDefinitionType;
 import io.harness.cdng.service.steps.ServiceStepOutcome;
 import io.harness.cdng.ssh.output.HostsOutput;
+import io.harness.cdng.ssh.output.SshInfraDelegateConfigOutput;
 import io.harness.cdng.stepsdependency.constants.OutcomeExpressionConstants;
 import io.harness.connector.ConnectorInfoDTO;
 import io.harness.data.structure.UUIDGenerator;
@@ -76,7 +77,9 @@ import io.harness.delegate.beans.connector.azureconnector.AzureCredentialType;
 import io.harness.delegate.beans.connector.azureconnector.AzureInheritFromDelegateDetailsDTO;
 import io.harness.delegate.task.ssh.AwsSshInfraDelegateConfig;
 import io.harness.delegate.task.ssh.AzureSshInfraDelegateConfig;
+import io.harness.delegate.task.ssh.EmptyHostDelegateConfig;
 import io.harness.delegate.task.ssh.PdcSshInfraDelegateConfig;
+import io.harness.delegate.task.ssh.SshInfraDelegateConfig;
 import io.harness.encryption.Scope;
 import io.harness.encryption.SecretRefData;
 import io.harness.exception.AccessDeniedException;
@@ -98,6 +101,7 @@ import io.harness.pms.contracts.execution.failure.FailureData;
 import io.harness.pms.contracts.plan.ExecutionMetadata;
 import io.harness.pms.contracts.plan.ExecutionPrincipalInfo;
 import io.harness.pms.contracts.plan.PrincipalType;
+import io.harness.pms.contracts.steps.StepCategory;
 import io.harness.pms.rbac.PipelineRbacHelper;
 import io.harness.pms.sdk.core.data.ExecutionSweepingOutput;
 import io.harness.pms.sdk.core.data.OptionalSweepingOutput;
@@ -106,6 +110,7 @@ import io.harness.pms.sdk.core.resolver.RefObjectUtils;
 import io.harness.pms.sdk.core.resolver.outcome.OutcomeService;
 import io.harness.pms.sdk.core.resolver.outputs.ExecutionSweepingOutputService;
 import io.harness.pms.sdk.core.steps.io.StepResponse;
+import io.harness.pms.sdk.core.steps.io.StepResponse.StepOutcome;
 import io.harness.pms.sdk.core.steps.io.StepResponse.StepResponseBuilder;
 import io.harness.pms.yaml.ParameterField;
 import io.harness.rule.Owner;
@@ -113,6 +118,7 @@ import io.harness.rule.OwnerRule;
 import io.harness.serializer.KryoSerializer;
 import io.harness.service.DelegateGrpcClientWrapper;
 import io.harness.steps.EntityReferenceExtractorUtils;
+import io.harness.steps.OutputExpressionConstants;
 import io.harness.steps.StepHelper;
 import io.harness.steps.environment.EnvironmentOutcome;
 import io.harness.utils.YamlPipelineUtils;
@@ -124,6 +130,7 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -184,7 +191,9 @@ public class InfrastructureTaskExecutableStepV2Test extends CategoryTest {
 
     doReturn("bytes".getBytes()).when(kryoSerializer).asDeflatedBytes(any());
 
-    doReturn(logCallback).when(infrastructureStepHelper).getInfrastructureLogCallback(any(Ambiance.class));
+    doReturn(logCallback)
+        .when(infrastructureStepHelper)
+        .getInfrastructureLogCallback(any(Ambiance.class), eq(true), eq("Execute"));
 
     // return all the hosts passed as is
     when(stageExecutionHelper.saveAndExcludeHostsWithSameArtifactDeployedIfNeeded(
@@ -508,9 +517,9 @@ public class InfrastructureTaskExecutableStepV2Test extends CategoryTest {
         .addRollbackArtifactToStageOutcomeIfPresent(
             any(Ambiance.class), any(StepResponseBuilder.class), any(ExecutionInfoKey.class), eq("SshWinRmAws"));
 
-    Collection<StepResponse.StepOutcome> stepOutcomes = stepResponse.getStepOutcomes();
+    Collection<StepOutcome> stepOutcomes = stepResponse.getStepOutcomes();
     assertThat(stepOutcomes)
-        .containsAnyOf(StepResponse.StepOutcome.builder()
+        .containsAnyOf(StepOutcome.builder()
                            .outcome(getInstancesOutcome())
                            .name(OutcomeExpressionConstants.INSTANCES)
                            .group(OutcomeExpressionConstants.INFRASTRUCTURE_GROUP)
@@ -576,9 +585,9 @@ public class InfrastructureTaskExecutableStepV2Test extends CategoryTest {
         .addRollbackArtifactToStageOutcomeIfPresent(
             any(Ambiance.class), any(StepResponseBuilder.class), any(ExecutionInfoKey.class), eq("SshWinRmAzure"));
 
-    Collection<StepResponse.StepOutcome> stepOutcomes = stepResponse.getStepOutcomes();
+    Collection<StepOutcome> stepOutcomes = stepResponse.getStepOutcomes();
     assertThat(stepOutcomes)
-        .containsAnyOf(StepResponse.StepOutcome.builder()
+        .containsAnyOf(StepOutcome.builder()
                            .outcome(getInstancesOutcome())
                            .name(OutcomeExpressionConstants.INSTANCES)
                            .group(OutcomeExpressionConstants.INFRASTRUCTURE_GROUP)
@@ -606,7 +615,7 @@ public class InfrastructureTaskExecutableStepV2Test extends CategoryTest {
 
     assertThat(stepResponse.getStatus()).isEqualTo(Status.SUCCEEDED);
     assertThat(stepResponse.getStepOutcomes()).hasSize(2);
-    Iterator<StepResponse.StepOutcome> iterator = stepResponse.getStepOutcomes().iterator();
+    Iterator<StepOutcome> iterator = stepResponse.getStepOutcomes().iterator();
     assertThat(iterator.next().getOutcome()).isEqualTo(getInstancesOutcome());
     assertThat(iterator.next().getOutcome())
         .isEqualTo(PdcInfrastructureOutcome.builder()
@@ -717,24 +726,30 @@ public class InfrastructureTaskExecutableStepV2Test extends CategoryTest {
 
     mockSaveAndGetInstancesOutcomeForTaskStep();
 
+    doReturn(EmptyHostDelegateConfig.builder().hosts(Collections.emptySet()).build())
+        .when(cdStepHelper)
+        .getSshInfraDelegateConfig(any(), any());
+
     StepResponse stepResponse = step.handleAsyncResponse(ambiance,
         InfrastructureTaskExecutableStepV2Params.builder()
             .envRef(ParameterField.createValueField("env-id"))
             .infraRef(ParameterField.createValueField("infra-id"))
             .build(),
-        Map.of("taskId",
-            AwsListEC2InstancesTaskResponse.builder()
-                .commandExecutionStatus(CommandExecutionStatus.SUCCESS)
-                .instances(List.of(mockAwsInstance("1"), mockAwsInstance("2")))
-                .build()));
+        Collections.emptyMap());
 
     // verify unit progress data
     assertThat(stepResponse.getUnitProgressList().get(0).getUnitName()).isEqualTo("Execute");
     assertThat(stepResponse.getUnitProgressList().get(0).getStatus()).isEqualTo(UnitStatus.SUCCESS);
     assertThat(stepResponse.getStatus()).isEqualTo(Status.SUCCEEDED);
-    assertThat(stepResponse.getStepOutcomes()).hasSize(1);
+    assertThat(stepResponse.getStepOutcomes()).hasSize(2);
 
-    Outcome outcome = stepResponse.getStepOutcomes().iterator().next().getOutcome();
+    Iterator<StepOutcome> iterator = stepResponse.getStepOutcomes().iterator();
+    Outcome outcome = iterator.next().getOutcome();
+    assertThat(outcome).isInstanceOf(InstancesOutcome.class);
+    InstancesOutcome customDeploymentInstances = (InstancesOutcome) outcome;
+    assertThat(customDeploymentInstances.getInstances()).isEmpty();
+
+    outcome = iterator.next().getOutcome();
     assertThat(outcome).isInstanceOf(CustomDeploymentInfrastructureOutcome.class);
 
     CustomDeploymentInfrastructureOutcome stepOutCome = (CustomDeploymentInfrastructureOutcome) outcome;
@@ -757,6 +772,20 @@ public class InfrastructureTaskExecutableStepV2Test extends CategoryTest {
     verify(stageExecutionHelper, times(1))
         .addRollbackArtifactToStageOutcomeIfPresent(any(Ambiance.class), any(StepResponseBuilder.class),
             any(ExecutionInfoKey.class), eq(InfrastructureKind.CUSTOM_DEPLOYMENT));
+
+    ArgumentCaptor<SshInfraDelegateConfigOutput> delegateConfigOutput =
+        ArgumentCaptor.forClass(SshInfraDelegateConfigOutput.class);
+    verify(sweepingOutputService, times(1))
+        .consume(eq(ambiance), eq(OutputExpressionConstants.SSH_INFRA_DELEGATE_CONFIG_OUTPUT_NAME),
+            delegateConfigOutput.capture(), eq(StepCategory.STAGE.name()));
+
+    SshInfraDelegateConfigOutput delegateConfigOutputValue = delegateConfigOutput.getValue();
+    assertThat(delegateConfigOutputValue).isNotNull();
+    assertThat(delegateConfigOutputValue.getSshInfraDelegateConfig()).isNotNull();
+    SshInfraDelegateConfig sshInfraDelegateConfig = delegateConfigOutputValue.getSshInfraDelegateConfig();
+    assertThat(sshInfraDelegateConfig).isInstanceOf(EmptyHostDelegateConfig.class);
+    EmptyHostDelegateConfig emptyHostDelegateConfig = (EmptyHostDelegateConfig) sshInfraDelegateConfig;
+    assertThat(emptyHostDelegateConfig.getHosts()).isEmpty();
   }
 
   private AwsEC2Instance mockAwsInstance(String id) {
